JumpScript/tests/baselines/reference/cloduleTest2.errors.txt
tests/cases/compiler/cloduleTest2.jump(4,13): error TS2554: Expected 1 arguments, but got 0.
tests/cases/compiler/cloduleTest2.jump(10,13): error TS2554: Expected 1 arguments, but got 0.
tests/cases/compiler/cloduleTest2.jump(18,7): error TS2339: Property 'bar' does not exist on type 'm3d'.
tests/cases/compiler/cloduleTest2.jump(19,7): error TS2339: Property 'y' does not exist on type 'm3d'.
tests/cases/compiler/cloduleTest2.jump(27,7): error TS2339: Property 'bar' does not exist on type 'm3d'.
tests/cases/compiler/cloduleTest2.jump(28,7): error TS2339: Property 'y' does not exist on type 'm3d'.
tests/cases/compiler/cloduleTest2.jump(33,9): error TS2554: Expected 1 arguments, but got 0.
tests/cases/compiler/cloduleTest2.jump(36,10): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/compiler/cloduleTest2.jump (8 errors) ====
    module T1 {
        module m3d { export var y = 2; }
        declare class m3d { constructor(foo); foo(): void ; static bar(); }
        var r = new m3d(); // error
                ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
    }
    
    module T2 {
        declare class m3d { constructor(foo); foo(): void; static bar(); }
        module m3d { export var y = 2; }
        var r = new m3d(); // error
                ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
    }
    
    module T3 {
        module m3d { export var y = 2; }
        declare class m3d { foo(): void; static bar(); }
        var r = new m3d();
        r.foo();
        r.bar(); // error
          ~~~
!!! error TS2339: Property 'bar' does not exist on type 'm3d'.
        r.y; // error
          ~
!!! error TS2339: Property 'y' does not exist on type 'm3d'.
    }
    
    module T4 {
        declare class m3d { foo(): void; static bar(); }
        module m3d { export var y = 2; }
        var r = new m3d();
        r.foo();
        r.bar(); // error
          ~~~
!!! error TS2339: Property 'bar' does not exist on type 'm3d'.
        r.y; // error
          ~
!!! error TS2339: Property 'y' does not exist on type 'm3d'.
    }
    
    module m3d { export var y = 2; }
    declare class m3d { constructor(foo); foo(): void; static bar(); }
    var r = new m3d(); // error
            ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
    
    declare class m4d extends m3d { }
    var r2 = new m4d(); // error
             ~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.